--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=37.122.210.152
 DB_PORT=5432
-DB_DATABASE=metal
-DB_USERNAME=postgres
-DB_PASSWORD=123
+DB_DATABASE=phptest
+DB_USERNAME=phptest
+DB_PASSWORD=Bq18392ghJCdvTaDa0
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
